fix z-index in gallery

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -8,13 +8,12 @@
 // }
 
 html {
-  /* Root font size - 10px by default */
-  // font-size: 62.5%;
+  
 }
 
-// body {
-//   box-sizing: border-box;   
-// }
+body {
+  
+}
 
 header {
   background-color: $color-white;
