--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,1 +1,4 @@
-.our-gallery {}
+.lum-open {
+  // above Bootstrap's fixed-top z-index
+  z-index: 1040;
+}
